Fix branch dropdown & nav bar wording spacing

--- a/src/Documents/index.scss
+++ b/src/Documents/index.scss
@@ -94,10 +94,6 @@ font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
   background-color: #7dc356;
   color: #fff;
 }
-.full-width{
-  width: 100%;
-  margin: auto;
-}
 
 .error div{ 
   border-color: #d51b1b;
