--- a/src/Mohassel/index.scss
+++ b/src/Mohassel/index.scss
@@ -104,11 +104,6 @@ code {
   color: #fff;
 }
 
-.full-width {
-  width: 100%;
-  margin: auto;
-}
-
 .error div {
   border-color: #d51b1b;
 }
