--- a/src/Shared/Assets/scss/app.scss
+++ b/src/Shared/Assets/scss/app.scss
@@ -144,3 +144,9 @@ input[type=radio] {
 }
 
 /*End of Loader Component*/
+
+.full-width {
+  width: 100%;
+  margin: auto;
+}
+
